--- a/analysis/index.html
+++ b/analysis/index.html
@@ -1678,7 +1678,7 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
       그 외 계정은 사칭일 수 있으니<br/>
       반드시 주의해 주세요.
     </p>
-<div class="btn primary" data-ev-click="xYNKds7BgUb4">확인</div>
+<div class="btn primary" data-x="xYNKds7BgUb4">확인</div>
 </div>
 </div>
 <!-- ✅ 분석기 진입 광고 팝업 (1일 1회) -->
@@ -1686,7 +1686,7 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <div class="ad-box">
 <div class="ad-head">
 <div class="ad-title">🎁 지금 많이 찾는 추천 놀이터</div>
-<div class="ad-close" data-ev-click="x5VTU-pDAJu4">오늘 그만 보기</div>
+<div class="ad-close" data-x="x5VTU-pDAJu4">오늘 그만 보기</div>
 </div>
 <div class="ad-grid" id="adGrid"></div>
 <div class="ad-actions">
@@ -1694,7 +1694,7 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <a class="btnx" href="https://t.me/UZU59" rel="noopener" target="_blank">문의</a>
 </div>
 <div class="ad-note">※ 팝업은 1일 1회만 표시됩니다. (원치 않으면 닫기)</div>
-<div class="ad-close" data-ev-click="xwDuaJXHBRyQ" style="margin-top:10px;text-align:center;">닫기</div>
+<div class="ad-close" data-x="xwDuaJXHBRyQ" style="margin-top:10px;text-align:center;">닫기</div>
 </div>
 </div>
 <div class="header">
@@ -1721,14 +1721,14 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <span class="autosave-label">자동 저장</span>
 <span aria-live="polite" class="save-badge" id="saveBadge"></span>
 </div>
-<button class="btn secondary mini" data-ev-click="xFdC3aSw3XC0" type="button">10초 가이드</button>
+<button class="btn secondary mini" data-x="xFdC3aSw3XC0" type="button">10초 가이드</button>
 </div>
 </div>
 <div aria-hidden="true" class="calc-divider"></div>
 <div class="controls controls-settings">
 <div class="selectWrap">
 <div class="fieldLabel"><span class="stepBubble">1</span> 종목</div>
-<select class="select" id="sport" data-ev-change="xdbwXLJupElI">
+<select class="select" id="sport" data-y="xdbwXLJupElI">
 <option value="soccer">축구</option>
 <option value="basketball">농구</option>
 <option value="baseball">야구</option>
@@ -1739,7 +1739,7 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 </div>
 <div class="selectWrap">
 <div class="fieldLabel"><span class="stepBubble">2</span> 분석 레벨</div>
-<select class="select" id="level" data-ev-change="xY8iS5Tjxrh8">
+<select class="select" id="level" data-y="xY8iS5Tjxrh8">
 <option value="simple">간단</option>
 <option value="mid">중급</option>
 <option value="adv">고급</option>
@@ -1748,7 +1748,7 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 </div>
 <div class="settingsHint">👇 먼저 <b>종목</b>과 <b>레벨</b>을 선택하면, 아래 입력 폼(메인/오버·언더/핸디)이 자동으로 최적화됩니다.</div>
 <!-- ✅ 팀/리그 입력(선택) -->
-<button class="btn ghost" id="metaToggleBtn" data-ev-click="xuuNR2fcjkMc" type="button">추가 정보 입력(선택) ▾</button><div id="metaFields"><div class="row2">
+<button class="btn ghost" id="metaToggleBtn" data-x="xuuNR2fcjkMc" type="button">추가 정보 입력(선택) ▾</button><div id="metaFields"><div class="row2">
 <div>
 <input class="textinput" id="league" placeholder="리그/대회명 (선택)"/>
 <div class="small-hint">※ 입력하지 않아도 분석 가능 / 공유 시 입력한 내용만 포함됩니다.</div>
@@ -1767,7 +1767,7 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <button aria-selected="false" class="st-tab" data-jump="history" role="tab" type="button">히스토리</button>
 </nav>
 <div class="mini-guide" id="miniGuide">
-<div class="head" data-ev-click="xFdC3aSw3XC0">
+<div class="head" data-x="xFdC3aSw3XC0">
 <div>💡 처음이면 <b>10초 가이드</b></div>
 <button aria-expanded="false" class="pill" id="miniGuidePill" type="button">열기</button>
 </div>
@@ -1789,7 +1789,7 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <div class="box" id="pasteBox">
 <div class="box-head">
 <div class="box-title" style="margin:0;">텍스트 붙여넣기 (자동 입력)</div>
-<button class="toggle" data-target="pasteBody" data-ev-click="xQ-olZZqTlNM" type="button">접기</button>
+<button class="toggle" data-target="pasteBody" data-x="xQ-olZZqTlNM" type="button">접기</button>
 </div>
 <div id="pasteBody">
 <div class="small-hint" style="margin-top:4px;">
@@ -1798,13 +1798,13 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <div class="paste-area" style="margin-top:10px;">
 <textarea class="paste-ta" id="pasteInput" placeholder="예) 맨시티 vs 리버풀  승 1.85 무 3.40 패 4.20 / 오버 2.5 1.95 언더 1.85 / 핸디 -1.5 1.90 1.95"></textarea>
 <div class="paste-actions">
-<button class="btn primary" id="btnPasteOneTap" data-ev-click="xeHYNSNLRJms" type="button">원터치 자동 입력+결과</button>
-<button class="btn primary paste-adv" data-ev-click="xeHYNSNLRJms" type="button">자동 입력</button>
-<button class="btn secondary paste-adv" data-ev-click="xkNzMpScbW28" type="button">입력만</button>
-<button class="btn secondary paste-adv" data-ev-click="xBvIP9bOhGyo" type="button">여러 경기 만들기</button>
-<button class="btn ghost" data-ev-click="xcSXPqtAJ1aE" type="button">예시</button>
-<button class="btn ghost" data-ev-click="xTkchO0qn9zg" type="button">지우기</button>
-<button class="btn ghost paste-adv" data-ev-click="xbmP6MgWSxL0" type="button">리스트 지우기</button>
+<button class="btn primary" id="btnPasteOneTap" data-x="xeHYNSNLRJms" type="button">원터치 자동 입력+결과</button>
+<button class="btn primary paste-adv" data-x="xeHYNSNLRJms" type="button">자동 입력</button>
+<button class="btn secondary paste-adv" data-x="xkNzMpScbW28" type="button">입력만</button>
+<button class="btn secondary paste-adv" data-x="xBvIP9bOhGyo" type="button">여러 경기 만들기</button>
+<button class="btn ghost" data-x="xcSXPqtAJ1aE" type="button">예시</button>
+<button class="btn ghost" data-x="xTkchO0qn9zg" type="button">지우기</button>
+<button class="btn ghost paste-adv" data-x="xbmP6MgWSxL0" type="button">리스트 지우기</button>
 <span class="paste-badge good" id="pasteBadgeOk" style="display:none;"></span>
 <span class="paste-badge warn" id="pasteBadgeWarn" style="display:none;"></span>
 <div class="paste-inline" style="margin-left:auto;">
@@ -1827,15 +1827,15 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <div class="k">감지된 경기</div>
 <div class="m" id="pasteListMeta"></div>
 <div class="paste-list-tools">
-<button class="btn ghost mini" data-ev-click="xq14CuV68768" type="button">정렬: 마진 낮은순</button>
+<button class="btn ghost mini" data-x="xq14CuV68768" type="button">정렬: 마진 낮은순</button>
 <label class="paste-mini-label">연속
                     <input class="paste-num" id="pasteChainCount" max="30" min="1" type="number" value="10"/>
                     개
                   </label>
-<button class="btn primary mini" data-ev-click="xRGK00JpLUM0" type="button">연속 저장</button>
-<button class="btn ghost mini" id="pasteChainStop" data-ev-click="xSdIUCCp-MPk" style="display:none;" type="button">중지</button>
-<button class="btn secondary mini" id="btnBundleShare" data-ev-click="xShN6fvM097w" type="button">오늘 수집 묶음</button>
-<button class="btn danger mini" data-ev-click="x74VCGvhWD4Q" title="오늘 수집 묶음(연속 저장으로 누적된 항목)을 초기화합니다." type="button">초기화</button>
+<button class="btn primary mini" data-x="xRGK00JpLUM0" type="button">연속 저장</button>
+<button class="btn ghost mini" id="pasteChainStop" data-x="xSdIUCCp-MPk" style="display:none;" type="button">중지</button>
+<button class="btn secondary mini" id="btnBundleShare" data-x="xShN6fvM097w" type="button">오늘 수집 묶음</button>
+<button class="btn danger mini" data-x="x74VCGvhWD4Q" title="오늘 수집 묶음(연속 저장으로 누적된 항목)을 초기화합니다." type="button">초기화</button>
 </div>
 </div>
 <div class="paste-list" id="pasteList"></div>
@@ -1901,7 +1901,7 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <div class="box" id="lineCompareBox">
 <div class="box-head">
 <div class="box-title" style="margin:0;">라인 비교 (A vs B)</div>
-<button class="toggle" data-target="lineCompareBody" data-ev-click="xjABh2DwCfb8" type="button">펼치기</button>
+<button class="toggle" data-target="lineCompareBody" data-x="xjABh2DwCfb8" type="button">펼치기</button>
 </div>
 <div id="lineCompareBody" style="display:none;">
 <div class="small-hint" style="margin-top:4px;">
@@ -1938,7 +1938,7 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <input disabled="" value="(A) 3배당 입력"/>
 </div>
 </div>
-<button class="btn secondary" data-ev-click="xlyAKerB5XJ0" type="button">A를 메인에 적용</button>
+<button class="btn secondary" data-x="xlyAKerB5XJ0" type="button">A를 메인에 적용</button>
 </div>
 <div class="lc-col">
 <div class="lc-head">라인 B</div>
@@ -1970,13 +1970,13 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <input disabled="" value="(B) 3배당 입력"/>
 </div>
 </div>
-<button class="btn secondary" data-ev-click="x59_hC15y7ko" type="button">B를 메인에 적용</button>
+<button class="btn secondary" data-x="x59_hC15y7ko" type="button">B를 메인에 적용</button>
 </div>
 </div>
 <div class="lc-out" id="lineCompareOut" style="display:none;"></div>
 <div class="actionRow" style="margin-top:10px;">
-<button class="btn" data-ev-click="xev9IXTDIuCQ" type="button">비교 계산</button>
-<button class="btn ghost" data-ev-click="x0bB9ocS2kF8" type="button">현재 메인값으로 채우기</button>
+<button class="btn" data-x="xev9IXTDIuCQ" type="button">비교 계산</button>
+<button class="btn ghost" data-x="x0bB9ocS2kF8" type="button">현재 메인값으로 채우기</button>
 </div>
 </div>
 </div>
@@ -1984,7 +1984,7 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <div class="box" id="handicapBox" style="display:none;">
 <div class="box-head">
 <div class="box-title" style="margin:0;">핸디캡 (선택 · 정밀 마진)</div>
-<button class="toggle" data-target="handicapBody" data-ev-click="xuyjgeZH0Hbo" type="button">접기</button>
+<button class="toggle" data-target="handicapBody" data-x="xuyjgeZH0Hbo" type="button">접기</button>
 </div>
 <div id="handicapBody">
 <div class="grid">
@@ -2014,7 +2014,7 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <div class="box" id="totalBox" style="display:none;">
 <div class="box-head">
 <div class="box-title" style="margin:0;">오버/언더 (선택 · 아시안 근사 지원)</div>
-<button class="toggle" data-target="totalBody" data-ev-click="xGhTronpJggk" type="button">접기</button>
+<button class="toggle" data-target="totalBody" data-x="xGhTronpJggk" type="button">접기</button>
 </div>
 <div id="totalBody">
 <div class="grid">
@@ -2048,8 +2048,8 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 </div>
 <div aria-live="polite" class="input-warn" id="inputWarn"></div>
 <div class="actions">
-<button class="btn primary" id="btnCalc" data-ev-click="xNj4U_lF5s1Y" type="button">계산하기</button>
-<button class="btn secondary" data-ev-click="xrRobQCI48wc" type="button">초기화</button>
+<button class="btn primary" id="btnCalc" data-x="xNj4U_lF5s1Y" type="button">계산하기</button>
+<button class="btn secondary" data-x="xrRobQCI48wc" type="button">초기화</button>
 </div>
 <div class="note">
         ※ 본 도구는 “판단 보조용”입니다. 승률을 보장하지 않으며, 손실을 감당 가능한 범위 내에서 이용하세요.
@@ -2065,8 +2065,8 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 </div>
 <div class="result" id="result" style="display:none;"></div>
 <div aria-label="저장/공유/업체 바로가기" class="result-dock" id="resultDock" style="display:none;">
-<button class="btn secondary" data-ev-click="x6c9BtHNEPHI" type="button">저장됨 · 히스토리</button>
-<button class="btn gold" data-ev-click="xuCndALjarCQ" type="button">공유</button>
+<button class="btn secondary" data-x="x6c9BtHNEPHI" type="button">저장됨 · 히스토리</button>
+<button class="btn gold" data-x="xuCndALjarCQ" type="button">공유</button>
 <a class="btn secondary" data-cta="analysis_to_vendors" data-no-auto-outbound="1" href="/cert/">업체 카드</a>
 </div>
 </div>
@@ -2115,15 +2115,15 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
       </div>
 <div class="history-actions">
 <div class="history-toolbar">
-<button class="btn secondary danger" disabled="" id="btnDeleteSelected" data-ev-click="xTfmcLNYjNOE" type="button">선택 삭제</button>
-<button class="btn secondary" data-ev-click="x1fBFTvDrkas" type="button">전체 삭제</button>
-<button class="btn secondary" disabled="" id="btnCompare" data-ev-click="xFQLtkBjXjUw" type="button">비교</button>
-<button class="btn secondary" data-ev-click="xITq6aRUhND8" type="button">TOP3</button>
+<button class="btn secondary danger" disabled="" id="btnDeleteSelected" data-x="xTfmcLNYjNOE" type="button">선택 삭제</button>
+<button class="btn secondary" data-x="x1fBFTvDrkas" type="button">전체 삭제</button>
+<button class="btn secondary" disabled="" id="btnCompare" data-x="xFQLtkBjXjUw" type="button">비교</button>
+<button class="btn secondary" data-x="xITq6aRUhND8" type="button">TOP3</button>
 </div>
 <div aria-label="히스토리 필터" class="history-filters">
-<button class="seg on" data-filter="all" data-ev-click="x9o3hKq6ZKIs" type="button">전체</button>
-<button class="seg" data-filter="rec" data-ev-click="xouO4IKn7aY4" type="button">추천</button>
-<button class="seg" data-filter="untracked" data-ev-click="xcCb8OVJWMn8" type="button">미기록</button>
+<button class="seg on" data-filter="all" data-x="x9o3hKq6ZKIs" type="button">전체</button>
+<button class="seg" data-filter="rec" data-x="xouO4IKn7aY4" type="button">추천</button>
+<button class="seg" data-filter="untracked" data-x="xcCb8OVJWMn8" type="button">미기록</button>
 <div class="pick-ind">선택 <b id="pickCount">0</b></div>
 </div>
 </div>
@@ -2143,7 +2143,7 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <div class="modal-box">
 <div class="modal-head">
 <div class="t">비교 (2개 나란히)</div>
-<div class="modal-close" data-ev-click="xyJk7xaeq1o4">닫기</div>
+<div class="modal-close" data-x="xyJk7xaeq1o4">닫기</div>
 </div>
 <div class="small-hint" style="margin-bottom:10px;">
       히스토리에서 체크박스로 2개 선택 후 “비교 열기”를 누르세요.
@@ -2156,7 +2156,7 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <div class="modal-box share">
 <div class="modal-head">
 <div class="t">공유 카드 (이미지 저장)</div>
-<div class="modal-close" data-ev-click="xeTbxArHIfVg">닫기</div>
+<div class="modal-close" data-x="xeTbxArHIfVg">닫기</div>
 </div>
 <div class="small-hint" style="margin-bottom:10px;">
       결과가 생성된 상태에서만 카드가 만들어집니다. (텍스트/링크도 함께 복사 가능)
@@ -2165,9 +2165,9 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <canvas aria-label="공유 카드 캔버스" class="share-canvas" height="1080" id="shareCardCanvas" width="1080"></canvas>
 </div>
 <div class="history-toolbar" style="margin-top:12px;">
-<button class="btn secondary" data-ev-click="x8shJ3pHqb6w" type="button">링크 복사</button>
-<button class="btn gold" data-ev-click="x93kJerGZGJU" type="button">이미지 저장</button>
-<button class="btn secondary" data-ev-click="x__KjCecilEg" type="button">문구 복사</button>
+<button class="btn secondary" data-x="x8shJ3pHqb6w" type="button">링크 복사</button>
+<button class="btn gold" data-x="x93kJerGZGJU" type="button">이미지 저장</button>
+<button class="btn secondary" data-x="x__KjCecilEg" type="button">문구 복사</button>
 </div>
 </div>
 </div>
@@ -2176,7 +2176,7 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <div class="modal-box share">
 <div class="modal-head">
 <div class="t" id="bundleTitle">오늘 수집 묶음</div>
-<div class="modal-close" data-ev-click="xzLl7fXv2JQk">닫기</div>
+<div class="modal-close" data-x="xzLl7fXv2JQk">닫기</div>
 </div>
 <div class="small-hint" style="margin-bottom:10px;">
       연속 저장(또는 클릭=연속 저장)으로 모은 항목을 <b>한 번에 공유</b>합니다. (각 항목 링크는 열면 동일 결과로 복원됩니다)
@@ -2228,8 +2228,8 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 <input checked="" id="bundlePromoVendor" type="checkbox"/>
 <span>업체 1개(조건부)</span>
 </label>
-<button class="btn ghost mini" id="btnPromoAdv" data-ev-click="xolnGVTrirtU" title="업체 티저 포함 조건(마진/EV 임계값)과 프리셋 상태를 세부 조절합니다." type="button">고급</button>
-<button class="btn ghost mini" data-ev-click="xxGJwRf2FDNQ" title="문구 변형(3종) 중 다음 템플릿으로 바꿉니다" type="button">새 문구</button>
+<button class="btn ghost mini" id="btnPromoAdv" data-x="xolnGVTrirtU" title="업체 티저 포함 조건(마진/EV 임계값)과 프리셋 상태를 세부 조절합니다." type="button">고급</button>
+<button class="btn ghost mini" data-x="xxGJwRf2FDNQ" title="문구 변형(3종) 중 다음 템플릿으로 바꿉니다" type="button">새 문구</button>
 </div>
 </div>
 <div class="bundle-promo-adv" id="bundlePromoAdv" style="display:none;">
@@ -2255,25 +2255,25 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
   </div>
 <textarea class="bundle-ta bundle-ta--promo" id="bundlePromoText" readonly=""></textarea>
 <div class="history-toolbar" style="margin-top:10px;">
-<button class="btn secondary" data-ev-click="xEPXBF19giIU" type="button">홍보글 복사</button>
-<button class="btn ghost" data-ev-click="xX-3TaRljQ6E" type="button">제목 복사</button>
-<button class="btn ghost" data-ev-click="xm8r-OP1EPOM" type="button">말머리 복사</button>
+<button class="btn secondary" data-x="xEPXBF19giIU" type="button">홍보글 복사</button>
+<button class="btn ghost" data-x="xX-3TaRljQ6E" type="button">제목 복사</button>
+<button class="btn ghost" data-x="xm8r-OP1EPOM" type="button">말머리 복사</button>
 </div>
 </div>
 <div class="history-toolbar" style="margin-top:12px;">
-<button class="btn secondary" data-ev-click="x8trG9U-lvbg" type="button">문구 복사</button>
-<button class="btn secondary" data-ev-click="xwtGsWd4UHzc" type="button">링크만 복사</button>
-<button class="btn ghost" data-ev-click="xwtTa55ErNCI" type="button">TOP3 요약 복사</button>
-<button class="btn gold" data-ev-click="xbSgQcDC0PJ8" type="button">이미지 저장</button>
-<button class="btn danger" data-ev-click="x74VCGvhWD4Q" type="button">오늘 묶음 초기화</button>
+<button class="btn secondary" data-x="x8trG9U-lvbg" type="button">문구 복사</button>
+<button class="btn secondary" data-x="xwtGsWd4UHzc" type="button">링크만 복사</button>
+<button class="btn ghost" data-x="xwtTa55ErNCI" type="button">TOP3 요약 복사</button>
+<button class="btn gold" data-x="xbSgQcDC0PJ8" type="button">이미지 저장</button>
+<button class="btn danger" data-x="x74VCGvhWD4Q" type="button">오늘 묶음 초기화</button>
 </div>
 </div>
 </div>
 <!-- 모바일 하단 도크 -->
 <div aria-label="빠른 동작" class="mobile-dock" id="mobileDock">
-<button class="dock-btn primary" data-ev-click="xNj4U_lF5s1Y" type="button">계산</button>
-<button class="dock-btn" data-ev-click="x6c9BtHNEPHI" type="button">저장</button>
-<button class="dock-btn" data-ev-click="xuCndALjarCQ" type="button">공유</button>
+<button class="dock-btn primary" data-x="xNj4U_lF5s1Y" type="button">계산</button>
+<button class="dock-btn" data-x="x6c9BtHNEPHI" type="button">저장</button>
+<button class="dock-btn" data-x="xuCndALjarCQ" type="button">공유</button>
 <a class="dock-btn" data-cta="analysis_dock_vendors" data-no-auto-outbound="1" href="/cert/">업체</a>
 </div>
 <div id="toast88"></div>
@@ -2339,9 +2339,9 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
 </div>
 <div class="onb-body" id="onbBody"></div>
 <div class="onb-actions">
-<button class="btn onb-skip" data-ev-click="xm31SmuzDjAA" type="button">건너뛰기</button>
-<button class="btn secondary" data-ev-click="xxYCJkfPGYY4" type="button">이전</button>
-<button class="btn primary" data-ev-click="x_4yhlh7Hc2A" type="button">다음</button>
+<button class="btn onb-skip" data-x="xm31SmuzDjAA" type="button">건너뛰기</button>
+<button class="btn secondary" data-x="xxYCJkfPGYY4" type="button">이전</button>
+<button class="btn primary" data-x="x_4yhlh7Hc2A" type="button">다음</button>
 </div>
 </div><style>
   .rel-links{max-width:1080px;margin:26px auto 34px;padding:14px 14px 16px;border-radius:18px;
@@ -2353,6 +2353,6 @@ body.simple .paste-inline .chk:not(.simple-only){display:none !important;}
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
-<script src="/assets/js/ie.4ecfc30ca8.js" defer></script>
+<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
 </body>
 </html>
