--- a/landing-b/index.html
+++ b/landing-b/index.html
@@ -289,9 +289,9 @@ a{ color:inherit; }
 <div class="t">88st.cloud</div>
 </div>
 <div class="nav">
-<a data-utm="1" href="/" data-ev-click="xnWWzU5DQOeU">메인</a>
-<a data-utm="1" href="/analysis/" data-ev-click="xa-govArggDE">분석기</a>
-<a data-utm="1" href="/cert/" data-ev-click="xY01SlhFIrtE">인증놀이터</a>
+<a data-utm="1" href="/" data-x="xnWWzU5DQOeU">메인</a>
+<a data-utm="1" href="/analysis/" data-x="xa-govArggDE">분석기</a>
+<a data-utm="1" href="/cert/" data-x="xY01SlhFIrtE">인증놀이터</a>
 </div>
 </div>
 <div class="hero">
@@ -301,10 +301,10 @@ a{ color:inherit; }
 <div class="pill">고액 유저 기준</div><div class="pill">검증 체크리스트</div><div class="pill">운영 이력</div><div class="pill">문의 채널</div><div class="pill">리스크 감소</div>
 </div>
 <div class="ctaRow">
-<a class="btn primary" data-utm="1" href="/analysis/" data-ev-click="xQqnkTdJqNR4">
+<a class="btn primary" data-utm="1" href="/analysis/" data-x="xQqnkTdJqNR4">
            무료 분석기 사용하기
         </a>
-<a class="btn secondary" data-utm="1" href="/cert/" data-ev-click="xuDMK1hesfGI">
+<a class="btn secondary" data-utm="1" href="/cert/" data-x="xuDMK1hesfGI">
            88 인증놀이터 바로보기
         </a>
 </div>
@@ -341,10 +341,10 @@ a{ color:inherit; }
 <div class="footer">
 <div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
 <div class="smallLinks">
-<a data-utm="1" href="/landing-a/" data-ev-click="xsixYYZgbTa4">입플·보너스</a>
-<a data-utm="1" href="/landing-b/" data-ev-click="xevu5uwFK2xE">고액/보증업체</a>
-<a data-utm="1" href="/landing-c/" data-ev-click="x0LJtnxljT8I">마진·EV</a>
-<a data-utm="1" href="/landing-d/" data-ev-click="x7vRJRLc95f0">배당 흐름</a>
+<a data-utm="1" href="/landing-a/" data-x="xsixYYZgbTa4">입플·보너스</a>
+<a data-utm="1" href="/landing-b/" data-x="xevu5uwFK2xE">고액/보증업체</a>
+<a data-utm="1" href="/landing-c/" data-x="x0LJtnxljT8I">마진·EV</a>
+<a data-utm="1" href="/landing-d/" data-x="x7vRJRLc95f0">배당 흐름</a>
 </div>
 </div>
 </div><style>
@@ -357,6 +357,6 @@ a{ color:inherit; }
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
-<script src="/assets/js/ie.4ecfc30ca8.js" defer></script>
+<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
 </body>
 </html>
