--- a/landing-c/index.html
+++ b/landing-c/index.html
@@ -289,9 +289,9 @@ a{ color:inherit; }
 <div class="t">88st.cloud</div>
 </div>
 <div class="nav">
-<a data-utm="1" href="/" data-ev-click="x29PmuYIN0hg">메인</a>
-<a data-utm="1" href="/analysis/" data-ev-click="xIPxlwbI0YXU">분석기</a>
-<a data-utm="1" href="/cert/" data-ev-click="xp9sVEm7_e-k">인증놀이터</a>
+<a data-utm="1" href="/" data-x="x29PmuYIN0hg">메인</a>
+<a data-utm="1" href="/analysis/" data-x="xIPxlwbI0YXU">분석기</a>
+<a data-utm="1" href="/cert/" data-x="xp9sVEm7_e-k">인증놀이터</a>
 </div>
 </div>
 <div class="hero">
@@ -301,10 +301,10 @@ a{ color:inherit; }
 <div class="pill">마진(오버라운드)</div><div class="pill">EV(+EV)</div><div class="pill">2-way/3-way</div><div class="pill">무료 계산</div><div class="pill">라인 비교</div>
 </div>
 <div class="ctaRow">
-<a class="btn primary" data-utm="1" href="/analysis/" data-ev-click="x4zi2N5yB2sE">
+<a class="btn primary" data-utm="1" href="/analysis/" data-x="x4zi2N5yB2sE">
            무료 분석기 사용하기
         </a>
-<a class="btn secondary" data-utm="1" href="/cert/" data-ev-click="xCOe7pe2jErQ">
+<a class="btn secondary" data-utm="1" href="/cert/" data-x="xCOe7pe2jErQ">
            88 인증놀이터 바로보기
         </a>
 </div>
@@ -341,10 +341,10 @@ a{ color:inherit; }
 <div class="footer">
 <div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
 <div class="smallLinks">
-<a data-utm="1" href="/landing-a/" data-ev-click="xUJjAtSTOPPk">입플·보너스</a>
-<a data-utm="1" href="/landing-b/" data-ev-click="xqZn28OfwkCQ">고액/보증업체</a>
-<a data-utm="1" href="/landing-c/" data-ev-click="xTn9flWyvi9Q">마진·EV</a>
-<a data-utm="1" href="/landing-d/" data-ev-click="x4yYgLvEP6cE">배당 흐름</a>
+<a data-utm="1" href="/landing-a/" data-x="xUJjAtSTOPPk">입플·보너스</a>
+<a data-utm="1" href="/landing-b/" data-x="xqZn28OfwkCQ">고액/보증업체</a>
+<a data-utm="1" href="/landing-c/" data-x="xTn9flWyvi9Q">마진·EV</a>
+<a data-utm="1" href="/landing-d/" data-x="x4yYgLvEP6cE">배당 흐름</a>
 </div>
 </div>
 </div><style>
@@ -357,6 +357,6 @@ a{ color:inherit; }
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
-<script src="/assets/js/ie.4ecfc30ca8.js" defer></script>
+<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
 </body>
 </html>
