--- a/minigame/index.html
+++ b/minigame/index.html
@@ -158,7 +158,7 @@ small.muted{color:#9a9a9a}
       그 외 계정은 사칭일 수 있으니<br/>
       반드시 주의해 주세요.
     </p>
-<div class="btn" data-ev-click="xYNKds7BgUb4">확인</div>
+<div class="btn" data-x="xYNKds7BgUb4">확인</div>
 </div>
 </div>
 <div class="wrap st-guide" role="main">
@@ -244,6 +244,6 @@ small.muted{color:#9a9a9a}
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
-<script src="/assets/js/ie.4ecfc30ca8.js" defer></script>
+<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
 </body>
 </html>
